test/scripted/compilation/errors/cannot_iter.bnj
# test:subtest
# test:error 5:18 "cannot iterate over value with type 'bool'"

func main() {
    for value in true {}
}

# test:subtest
# test:error 16:18 "cannot iterate over value with type 'S'"
# test:note 12:8 "implement '__iter__' for this type to support iteration"

struct S {}

func main() {
    var s = S {};
    for value in s {}
}

# test:subtest
# test:error 27:22 "cannot iterate over value with type 'S'"
# test:note 23:8 "implement '__refiter__' for this type to support reference iteration"

struct S {}

func main() {
    var s = S {};
    for ref value in s {}
}

# test:subtest
# test:error 38:26 "cannot iterate over value with type 'S'"
# test:note 34:8 "implement '__mutiter__' for this type to support mutating iteration"

struct S {}

func main() {
    var s = S {};
    for ref mut value in s {}
}

# test:subtest
# test:error 45:23 "cannot iterate over value with type 'integer literal'"

func main() {
    meta for value in 42 {}
}
